<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">RECORDR</string>
    <string name="start_app_id">210916065</string>
    <string name="unkown_contact">UNKNOWN CONTACT</string>
    <string name="private_number_name">Hidden number</string>
    <string name="detail_phonetype"><![CDATA[<b>Phone type: </b>]]>%s</string>
    <string name="detail_phonenumber"><![CDATA[<b>Phone number: </b>]]>%s</string>
    <string name="delete_phone_number">Delete</string>
    <string name="delete_contact_confirm_title">Delete contact</string>
    <string name="delete_contact_confirm_message">Delete the contact \"%s\"?
        All associated records will be deleted too and this action cannot be undone.</string>
    <string name="stop_recording">Stop recording calls</string>
    <string name="start_recording">Start recording calls</string>
    <string name="rec_status_recording">Will record new calls automatically</string>
    <string name="rec_status_not_recording">Manual action is required to record new calls.</string>
    <string name="discard_edit_message">Discard your changes?</string>
    <string name="delete_recording_confirm_title">Delete recordings</string>
    <string name="delete_recording_confirm_message" tools:ignore="PluralsCandidate">Delete %1$d recording(s)? This action cannot be undone.</string>
    <string name="move_heading">Choose where to move the selected recording(s).</string>
    <string name="make_system_title">Make %1$s app</string>
    <string name="number_invalid_message">This phone number is not valid.</string>
    <string name="number_exists_message">This phone number already exists in the application\'s database.</string>
    <string name="delete_recording_popup_text">Delete</string>
    <string name="rename_recording_popup_text">Rename</string>
    <string name="storage_info">Storage info</string>
    <string name="exit_app_title">Confirm</string>
    <string name="exit_app_message">Exit the application?</string>
    <string name="warning_title">Warning</string>
    <string name="information_title">Information</string>
    <string name="permissions_not_granted">"The application was not granted the necessary permissions for proper functioning. You should grant these permissions on the next run."</string>
    <string name="huawei_protected_title">Huawei Protected Apps</string>
    <string name="huawei_protected_message">"%s requires to be enabled in 'Protected Apps' to function properly.%n</string>
    <string name="audio_file_missing">Cannot find the audio file</string>
    <string name="rename_recording_title">Rename recording</string>
    <string name="rename_recording_input_text">Enter new recording name</string>
    <string name="rename_illegal_chars">The recording name you entered contains illegal characters. The recording was not renamed</string>
    <string name="rename_already_used">This file name is already used. The recording was not renamed.</string>
    <string name="error_title">Error</string>
    <string name="rename_error">An error occurred while renaming the recording.</string>
    <string name="recording_info_title">Recording info</string>
    <string name="recordings_info_title">Recordings info</string>
    <string name="recordings_info_text">Total size: %s \n\nTo get detailed info about a specific recording you must select only that recording. </string>
    <string name="lossless_quality">Lossless quality</string>
    <string name="hi_quality">High quality</string>
    <string name="med_quality">Medium quality</string>
    <string name="bas_quality">Basic quality</string>
    <string name="private_storage">Private application storage</string>
    <string name="nonexistent_file">\n(The file does not exist)</string>
    <string name="move_destination_same">The specified destination directory is the same with the current directory of one of the selected recordings. No recordings were moved.</string>
    <string name="progress_title">Progress</string>
    <string name="progress_text">Moving recordings&#8230;</string>
    <string name="canceled_move">The move was canceled. Some files might be corrupted or missing.</string>
    <string name="success_move_title">Success</string>
    <string name="success_move_text">The recording(s) were successfully moved.</string>
    <string name="error_move">An error occurred while moving the recording(s). Some files might be corrupted or missing.</string>
    <string name="playing">Playing </string>
    <string name="recording_speaker_off">Recording&#8230; (speaker off)</string>
    <string name="start_speaker">Start speaker</string>
    <string name="stop_speaker">Stop speaker</string>
    <string name="recording_speaker_on">Recording&#8230; (speaker on)</string>
    <string name="recording_answer_call">Recording will begin when you answer the call.</string>
    <string name="start_recording_notification">Start recording</string>
    <string name="start_recording_notification_text">Press \"Start recording\" to begin recording.</string>
    <string name="choose_recordings_storage">Choose where to store recordings</string>
    <string name="no_recordings">No recordings are currently associated with this contact</string>
    <string name="no_contacts">There are currently no contacts.</string>
    <string name="edit_contact_name">Contact name:</string>
    <string name="edit_phone_number">Phone number:</string>
    <string name="edit_phone_type">Phone type:</string>
    <string name="info_dialog_date">Date: </string>
    <string name="info_dialog_duration">Duration: </string>
    <string name="info_dialog_size">Size: </string>
    <string name="info_dialog_format">Format: </string>
    <string name="info_dialog_location">Location: </string>
    <string name="info_storage_private">Private space:&#160;</string>
    <string name="info_storage_public">Public filesystem:&#160;</string>
    <string name="settings_name">Settings</string>
    <string name="about_name">About</string>
    <string name="share">Share</string>
    <string name="edit_photo_remove">Remove photo</string>
    <string name="edit_photo_select_new">Select new photo</string>
    <string name="edit_photo_take">Take new photo</string>
    <string name="storage_options_move_private">Move to private application storage</string>
    <string name="storage_options_move_public">Move to public storage</string>
    <string name="settings_storage_names_private">Private (files are visible only to this app)</string>
    <string name="settings_storage_names_public">Public (files are visible to all apps)</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_light">Light</string>
    <string name="auth_record_priv_title">Hidden numbers calls</string>
    <string name="auth_record_priv_sum">Automatically record calls from hidden numbers</string>
    <string name="enabled_title">Record calls</string>
    <string name="enabled_sum">Call recording enabled</string>
    <string name="prefs_storage_title">Recordings storage</string>
    <string name="prefs_storage_path_title">Where to store recordings</string>
    <string name="prefs_speaker_title">Speaker use</string>
    <string name="prefs_speaker_sum">Put device on speaker while recording calls</string>
    <string name="prefs_format_title">Recording format</string>
    <string name="prefs_mode_title">Recording mode</string>
    <string name="prefs_theme_title">Theme</string>
    <string name="help">Help</string>
    <string name="perms_title">Setup the permissions</string>
    <string name="perms_intro">%s needs the permissions described below:</string>
    <string name="perms_phone">The permission to <b>make and manage phone calls</b> is requested because recording phone calls requires that the app knows when the device is making or receiving a phone call.</string>
    <string name="perms_record">The permission to <b>record audio</b> is requested because the applications records phone calls.</string>
    <string name="perms_contacts">The permission to <b>access contacts</b> is requested because assigning the recordings to a phone number requires reading the device\'s contacts database.</string>
    <string name="perms_files">The permission to <b>access photos, media and files</b> is requested because the recordings are written and read from the device\'s storage and also because the app contacts are personalized with photos.</string>
    <string name="setup_power_title">Setup power management</string>
    <string name="doze_info">%s cannot function properly if Android power management optimization is in effect. For proper functioning you will have to manually turn off the power optimization for this application.</string>
    <string name="other_power_optimizations">Some custom versions of Android operating system have power management methods implemented by their vendors, like \"Protected apps\" on Huawei phones. Proper functioning of %s requires that any power optimization that affects this application be turned off.\nPlease consult your operating system documentation to find if there are such power optimizations.</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="turn_off_opt">Turn off optimization</string>
    <string name="finish">Finish</string>
    <string name="optimization_still_active">If you don\'t turn off the Android power optimization for this app it won\'t be able to function properly. You can turn off the power optimization at the next run.</string>
    <string name="about_devname">Developer: Eugen Rădulescu</string>
    <string name="about_appname_version">%s version %s</string>
    <string name="help_title1">Overview</string>
    <string name="help_title2">Recording calls</string>
    <string name="help_title3">Playing recordings</string>
    <string name="help_title4">Managing recordings</string>
    <string name="help_title5">EULA</string>
    <string name="help_title6">Privacy policy</string>
    <string name="help_title7">Third party licenses</string>
    <string name="app_description">A call recording application built for simplicity and speed.</string>
    <string name="player_error">Error while playing the audio file. Please restart the application.</string>
    <string name="player_title">Audio player</string>
    <string name="volume">Volume</string>
    <string name="gain">Gain</string>
    <string name="recording_info">Playing \"%s\"\n%s</string>
    <string name="send_devs">Send logs to developer</string>
    <string name="send_devs_question">Only use this function when requested by the developers.</string>
    <string name="dev_email">bilal.sammour@toptal.com</string>
    <string name="eula_agree">I have read and I agree with the Terms of use of the application</string>
    <string name="show_eula_text">Terms of use</string>
    <string name="eula_title">EULA</string>
    <string name="version_eula_screen">Version %s</string>
    <string name="bottom_nav_contacts">Contacts</string>
    <string name="bottom_nav_recordings">Unassigned recordings</string>
    <string name="no_unassigned">There are no unassigned recordings.</string>
    <string name="unknown_number">Unknown phone number</string>
    <string name="assign_contact_popup_text">Assign to phone contact</string>
    <string name="assign_private_popup_text">Assign to hidden phone number</string>
    <string name="assign_to_contact_ok">The recording(s) were successfully assigned to contact.</string>
    <string name="assign_to_contact_err">An error occurred while assigning the recording(s) to contact.</string>
    <string name="pref_audio_src_title">Audio source for recordings</string>
    <string name="prefs_google_drive">Google drive use</string>
    <string name="prefs_google_drive_sum">Put Sync on Google drive</string>
    <string name="recordings_associated">The recordings associated with this contact consume storage as follows:</string>
</resources>