<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:paddingStart="50dp"
    android:paddingTop="50dp"
    android:paddingEnd="50dp"
    android:paddingBottom="30dp">

    <TextView
        android:id="@+id/perms_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/perms_title"
        android:textSize="28sp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/setup_perms_next"
        android:layout_below="@id/perms_title"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/perms_intro"
                style="@style/setupParagraphs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/setupParagraphs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perms_phone" />

            <TextView
                style="@style/setupParagraphs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perms_record" />

            <TextView
                style="@style/setupParagraphs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perms_contacts" />

            <TextView
                style="@style/setupParagraphs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perms_files" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/setup_perms_next"
        style="@style/setupButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/next" />

</RelativeLayout>