<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/recordings_associated" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/info_storage_private_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_storage_private"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/info_storage_private_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/info_storage_public_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_storage_public"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/info_storage_public_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>