<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/setup_confirm_lat_margins"
    android:layout_marginTop="@dimen/setup_confirm_up_margins"
    android:layout_marginEnd="@dimen/setup_confirm_lat_margins"
    android:layout_marginBottom="@dimen/setup_confirm_up_margins"
    android:fillViewport="true">

    <FrameLayout
        android:id="@+id/center_complex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="350dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/setup_appname_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/setup_version_text_size" />

            <ImageView
                android:id="@+id/launcher_img"
                android:layout_width="@dimen/setup_confirm_icon_size"
                android:layout_height="@dimen/setup_confirm_icon_size"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/launcher" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/agree_complex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/has_accepted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/eula_agree" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/show_eula"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_eula_text"
                        android:textColor="@color/colorAccent"
                        android:textSize="12sp"
                        app:cornerRadius="8dp"
                        app:strokeColor="@color/colorAccent"
                        app:strokeWidth="2dp" />
                </LinearLayout>

            </LinearLayout>


            <FrameLayout
                android:id="@+id/buttons_down"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/setup_confirm_cancel"
                    style="@style/setupButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/setup_confirm_next"
                    style="@style/setupButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/next" />

            </FrameLayout>

        </LinearLayout>

    </FrameLayout>

</ScrollView>
