<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/recording_height">

    <CheckBox
        android:id="@+id/recording_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/recording_checkbox_gone_start_margin"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/recording_adorn"
        android:layout_width="@dimen/recording_adorn_side"
        android:layout_height="@dimen/recording_adorn_side"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/recording_adorn_unselected_margin_start"
        android:layout_toEndOf="@id/recording_checkbox"
        android:contentDescription="@string/app_description" />

    <ImageView
        android:id="@+id/recording_exclamation"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignTop="@id/recording_adorn"
        android:layout_alignEnd="@id/recording_adorn"
        android:contentDescription="@string/app_description"
        android:src="@drawable/exclamation"
        android:visibility="gone" />

    <TextView
        android:id="@+id/recording_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/recording_title_unselected_margin_start"
        android:layout_toStartOf="@id/recording_type"
        android:layout_toEndOf="@id/recording_adorn" />

    <ImageView
        android:id="@+id/recording_type"
        android:layout_width="@dimen/recording_type_side"
        android:layout_height="@dimen/recording_type_side"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/recording_type_margin_end"
        android:layout_toStartOf="@+id/recording_share"
        android:contentDescription="@string/about_name" />

    <ImageView
        android:id="@+id/recording_share"
        android:layout_width="@dimen/recording_type_side"
        android:layout_height="@dimen/recording_type_side"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/recording_type_margin_end"
        android:contentDescription="@string/share"
        android:src="@drawable/share" />

</RelativeLayout>
