<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:paddingStart="50dp"
    android:paddingTop="50dp"
    android:paddingEnd="50dp"
    android:paddingBottom="30dp">

    <TextView
        android:id="@+id/power_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/setup_power_title"
        android:textSize="28sp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/setup_power_finish"
        android:layout_below="@id/power_title"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/doze_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/doze_info_text"
                    style="@style/setupParagraphs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp" />

                <Button
                    android:id="@+id/turn_off_doze"
                    style="@style/setupButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/turn_off_opt" />

            </LinearLayout>

            <TextView
                android:id="@+id/other_power_optimizations"
                style="@style/setupParagraphs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/setup_power_finish"
        style="@style/setupButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/finish" />

</RelativeLayout>
