<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_player"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="2dp"
        android:theme="@style/toolbar_theme"
        app:titleTextAppearance="@style/toolbar_font" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingTop="20dp"
        android:paddingBottom="30dp">

        <LinearLayout
            android:id="@+id/player_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical">

            <TextView
                android:id="@+id/recording_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:lineSpacingMultiplier="1.1"
                android:textAlignment="center"
                android:textColor="#828282"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <com.sdsmdg.harjot.crollerTest.Croller
                    android:id="@+id/volume_control"
                    style="?attr/playerControlStyle"
                    android:layout_marginEnd="15dp"
                    app:label="@string/volume" />

                <com.sdsmdg.harjot.crollerTest.Croller
                    android:id="@+id/gain_control"
                    style="?attr/playerControlStyle"
                    android:layout_marginStart="15dp"
                    app:label="@string/gain" />

            </LinearLayout>

            <com.chibde.visualizer.LineBarVisualizer
                android:id="@+id/visualizer"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/grid" />

            <LinearLayout
                android:id="@+id/play_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/test_player_play_pause"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="15dp"
                    android:contentDescription="@string/app_name" />

                <ImageButton
                    android:id="@+id/test_player_reset"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/player_stop"
                    android:contentDescription="@string/app_name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:weightSum="14">

                <TextView
                    android:id="@+id/test_play_time_played"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_weight="2"
                    android:textAlignment="center"
                    android:textSize="13sp" />

                <SeekBar
                    android:id="@+id/play_seekbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="10" />

                <TextView
                    android:id="@+id/test_play_total_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7dp"
                    android:layout_weight="2"
                    android:textAlignment="center"
                    android:textSize="13sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>